# gpt_review

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  __init__.py  __main__.py  apply_patch.py  cli.py  cookie_login.sh  dev-requirements.txt  example_instructions.txt  install.sh  logger.py  patch_validator.py  pyproject.toml  requirements.txt  review.py  software_review.sh  update.sh
.github/workflows/: ci.yml  e2e.yml
.gpt-creator/: scan.tsv
.gpt-creator/staging/: discovery.yaml  scan.json
.gpt-creator/staging/inputs/: pdr.md
.gpt-creator/staging/inputs/mermaid/my-project/mermaid/: data-model.mmd
.gpt-creator/staging/plan/: PLAN_TODO.md  entities.md  provenance.json  routes.md  tasks.json
apps/admin/: package.json  vite.config.ts
apps/admin/src/: App.vue  router.ts
apps/admin/src/components/: AdminFooter.vue  AdminNav.vue  DataTable.vue  StatCard.vue
apps/admin/src/pages/: Content.vue  Dashboard.vue  NotFound.vue  Settings.vue  Users.vue
apps/admin/src/styles/: tokens.css
apps/api/: package.json  tsconfig.build.json  tsconfig.json
apps/api/prisma/: env.example  schema.prisma
apps/api/src/: main.ts
apps/api/src/admin/: content-management.controller  users.controller
apps/api/src/auth/: guards  jwt.strategy  login  signup
apps/api/src/events/: past.controller  upcoming.controller
apps/api/src/program/: filters.service  schedule.controller  seed.ts
apps/web/: package.json  tsconfig.json  vite.config.ts
apps/web/src/: App.vue  router.ts
apps/web/src/components/: BaseCard.vue  NavBar.vue  SiteFooter.vue
apps/web/src/pages/: About.vue  Home.vue  Login.vue  NotFound.vue
apps/web/src/styles/: tokens.css
db/: init.sql  my.cnf  seed.sql
docker/: Dockerfile.admin  Dockerfile.api  Dockerfile.web  docker-compose.yml  nginx.conf
gpt-review/: schema.json
gpt_review/: __init__.py  __main__.py  api_client.py  api_driver.py  blueprints_util.py  codex_client.py  file_scanner.py  fs_utils.py  fullfile_api_driver.py  git_ops.py  iterate.py  logger.py  orchestrator.py  prompts.py  repo_scanner.py  schema.json  workflow.py
my-project/.gpt-creator/staging/inputs/: openapi.yaml
my-project/.gpt-creator/staging/inputs/mermaid/: system-overview.mmd
my-project/.gpt-creator/staging/inputs/sql/: schema.sql
my-project/db/: seed.sql
my-project/docs/: Jira Backlog.md  SDS.md
tests/: test_api_driver_offline.py  test_apply_patch.py  test_apply_patch_normalization.py  test_apply_patch_selective_stage.py  test_cli_entrypoints.py  test_commit_scoping.py  test_extract_patch.py  test_logger_imports.py  test_patch_validator.py  test_review_driver_fallbacks.py  test_review_state.py  test_scoped_staging.py  test_session_rules.py
